force-app/main/default/objects/Product_Line_Team__c.object
<CustomObject>
    <fields>
        <fullName>Member2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Line_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <referenceTo>Product_Line__c</referenceTo>
        <relationshipLabel>Product Line Teams</relationshipLabel>
        <relationshipName>Product_Line_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Line Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Member2__c</columns>
        <columns>Primary__c</columns>
        <columns>Product_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Line Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Member2_required</fullName>
        <active>true</active>
        <errorConditionFormula>Member2__c = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Member2__c</errorDisplayField>
        <errorMessage>Member2  est obligatoire</errorMessage>
    </validationRules>
</CustomObject>