force-app/main/default/objects/Product_Line_Team__c/validationRules/Member2_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Member2_required</fullName>
    <active>true</active>
    <errorConditionFormula>Member2__c = &#39;&#39;</errorConditionFormula>
    <errorDisplayField>Member2__c</errorDisplayField>
    <errorMessage>Member2  est obligatoire</errorMessage>
</ValidationRule>