force-app/main/default/objects/Product_Line_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Member2__c</columns>
    <columns>Primary__c</columns>
    <columns>Product_Line__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>